--- a/Bioinformatics_Module03.ipynb
+++ b/Bioinformatics_Module03.ipynb
@@ -1252,41 +1252,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IzKFWDlgq6zo",
-        "outputId": "1a4d0584-afcb-46ea-fac1-265bbc7bcd89"
+        "outputId": "c91f2659-20f4-4304-bc46-cfe8ed10e862"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'H.neandertalensis': 'ACGTCGCTCTGCTA', 'H.sapiens': 'ACGTCACTCTGCTA'}\n",
-            "ACGTCACTCTGCTA\n",
-            ">H.neandertalensis\n",
-            "ACGTCGCTCTGCTA\n",
-            ">H.sapiens\n",
-            "ACGTCACTCTGCTA\n",
-            ">P.troglodytes\n",
-            "ACGTCACTCTCCTA\n",
-            ">G.gorilla\n",
-            "ACGTCCTCCTA\n",
-            ">H.erectus\n",
-            "ACGTCACTCTGCTA\n"
+            "{'H.neandertalensis': 'ACGTCGCTCTGCTA', 'H.sapiens': 'ACGTCACTCTGCTA'}\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'H.neandertalensis': 'ACGTCGCTCTGCTA',\n",
-              " 'H.sapiens': 'ACGTCACTCTGCTA',\n",
-              " 'P.troglodytes': 'ACGTCACTCTCCTA',\n",
-              " 'G.gorilla': 'ACGTCCTCCTA',\n",
-              " 'H.erectus': 'ACGTCACTCTGCTA'}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 60
         }
       ]
     },
@@ -1315,30 +1290,33 @@
         "\n",
         "sequences.update({\"G.gorilla\":\"ACGTCCTCCTA\", \"H.erectus\":\"ACGTCACTCTGCTA\"})\n",
         "\n",
-        "print (sequences[\"H.sapiens\"])\n",
-        "\n",
         "for key,value in sequences.items():\n",
-        "     print (key,value)"
+        "     print (\"> \"+key)\n",
+        "     print (value)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "b-2XDof4rtP8",
-        "outputId": "1e998098-f26e-4df1-fd79-38816a84ee15"
+        "outputId": "2a8e43f7-9c30-49f4-9e2f-108447f18dc4"
       },
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "> H.neandertalensis\n",
+            "ACGTCGCTCTGCTA\n",
+            "> H.sapiens\n",
             "ACGTCACTCTGCTA\n",
-            "H.neandertalensis ACGTCGCTCTGCTA\n",
-            "H.sapiens ACGTCACTCTGCTA\n",
-            "P.troglodytes ACGTCACTCTCCTA\n",
-            "G.gorilla ACGTCCTCCTA\n",
-            "H.erectus ACGTCACTCTGCTA\n"
+            "> P.troglodytes\n",
+            "ACGTCACTCTCCTA\n",
+            "> G.gorilla\n",
+            "ACGTCCTCCTA\n",
+            "> H.erectus\n",
+            "ACGTCACTCTGCTA\n"
           ]
         }
       ]
@@ -1354,12 +1332,103 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "file_name = \"/content/rosalind_ini6 (1).txt\"\n",
+        "with open(file_name,\"r\") as data:\n",
+        "  x = data.read()\n",
+        "  x = x.rstrip()\n",
+        "  sequences = {}\n",
+        "  for word in x.split(sep=\" \"):\n",
+        "    if word not in sequences:\n",
+        "      sequences[word] = 1\n",
+        "    else:\n",
+        "      sequences[word] += 1\n",
+        "\n",
+        "for key,value in sequences.items():\n",
+        "  print(key,value)"
+      ],
       "metadata": {
-        "id": "lD3KoTY9wWa7"
+        "id": "lD3KoTY9wWa7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f78b30f5-76cf-442d-b622-5d5d85385add"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "When 1\n",
+            "I 2\n",
+            "find 1\n",
+            "myself 1\n",
+            "in 4\n",
+            "times 1\n",
+            "of 11\n",
+            "trouble 1\n",
+            "Mother 2\n",
+            "Mary 2\n",
+            "comes 2\n",
+            "to 3\n",
+            "me 4\n",
+            "Speaking 3\n",
+            "words 7\n",
+            "wisdom 7\n",
+            "let 30\n",
+            "it 36\n",
+            "be 41\n",
+            "And 3\n",
+            "my 1\n",
+            "hour 1\n",
+            "darkness 1\n",
+            "she 1\n",
+            "is 4\n",
+            "standing 1\n",
+            "right 1\n",
+            "front 1\n",
+            "Let 6\n",
+            "Whisper 4\n",
+            "when 2\n",
+            "the 4\n",
+            "broken 1\n",
+            "hearted 1\n",
+            "people 1\n",
+            "living 1\n",
+            "world 1\n",
+            "agree 1\n",
+            "There 4\n",
+            "will 5\n",
+            "an 4\n",
+            "answer 4\n",
+            "For 1\n",
+            "though 1\n",
+            "they 2\n",
+            "may 1\n",
+            "parted 1\n",
+            "there 2\n",
+            "still 2\n",
+            "a 2\n",
+            "chance 1\n",
+            "that 2\n",
+            "see 1\n",
+            "night 1\n",
+            "cloudy 1\n",
+            "light 1\n",
+            "shines 1\n",
+            "on 1\n",
+            "Shine 1\n",
+            "until 1\n",
+            "tomorrow 1\n",
+            "wake 1\n",
+            "up 1\n",
+            "sound 1\n",
+            "music 1\n",
+            "yeah 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
