--- a/Bioinformatics_Module03.ipynb
+++ b/Bioinformatics_Module03.ipynb
@@ -1459,12 +1459,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "file_name = \"/content/rosalind_dna.txt\"\n",
+        "with open(file_name,\"r\") as data:\n",
+        "    string = data.read()\n",
+        "    print (string.count(\"A\"), string.count(\"C\"), string.count(\"G\"), string.count(\"T\"))\n"
+      ],
       "metadata": {
-        "id": "GlwS14zGxBIC"
+        "id": "GlwS14zGxBIC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a7e5d6a4-acf2-4ecf-ef68-1f7aa9a1f47c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "220 209 205 207\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
