--- a/Bioinformatics_Module03.ipynb
+++ b/Bioinformatics_Module03.ipynb
@@ -1494,12 +1494,102 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "file_name = \"/content/rosalind_ini6.txt\"\n",
+        "with open(file_name,\"r\") as data:\n",
+        "  x = data.read()\n",
+        "  x = x.rstrip()\n",
+        "  sequences = {}\n",
+        "  for word in x.split(sep=\" \"):\n",
+        "    sequences[word] = x.count(word)\n",
+        "\n",
+        "\n",
+        "for key,value in sequences.items():\n",
+        "  print(key,value)\n",
+        ""
+      ],
       "metadata": {
-        "id": "9H_S6jLnzfxR"
+        "id": "9H_S6jLnzfxR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4d6c443b-fc98-4500-dd1c-1c68136d9463"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "When 1\n",
+            "I 2\n",
+            "find 1\n",
+            "myself 1\n",
+            "in 12\n",
+            "times 1\n",
+            "of 11\n",
+            "trouble 1\n",
+            "Mother 2\n",
+            "Mary 2\n",
+            "comes 2\n",
+            "to 4\n",
+            "me 7\n",
+            "Speaking 3\n",
+            "words 7\n",
+            "wisdom 7\n",
+            "let 30\n",
+            "it 36\n",
+            "be 41\n",
+            "And 3\n",
+            "my 2\n",
+            "hour 1\n",
+            "darkness 1\n",
+            "she 1\n",
+            "is 15\n",
+            "standing 1\n",
+            "right 1\n",
+            "front 1\n",
+            "Let 6\n",
+            "Whisper 4\n",
+            "when 2\n",
+            "the 10\n",
+            "broken 1\n",
+            "hearted 1\n",
+            "people 1\n",
+            "living 1\n",
+            "world 1\n",
+            "agree 1\n",
+            "There 4\n",
+            "will 5\n",
+            "an 10\n",
+            "answer 4\n",
+            "For 1\n",
+            "though 1\n",
+            "they 2\n",
+            "may 1\n",
+            "parted 1\n",
+            "there 2\n",
+            "still 2\n",
+            "a 27\n",
+            "chance 1\n",
+            "that 2\n",
+            "see 1\n",
+            "night 1\n",
+            "cloudy 1\n",
+            "light 1\n",
+            "shines 1\n",
+            "on 2\n",
+            "Shine 1\n",
+            "until 1\n",
+            "tomorrow 1\n",
+            "wake 1\n",
+            "up 1\n",
+            "sound 1\n",
+            "music 1\n",
+            "yeah 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
