--- a/Bioinformatics_Module03.ipynb
+++ b/Bioinformatics_Module03.ipynb
@@ -311,22 +311,22 @@
         "# Create a list with 3 elements and then print them\n",
         "\n",
         "my_list = [\"Hello\", \"World\", \"Charles Darwin\"]\n",
-        "print (my_list[1])"
+        "print (my_list)"
       ],
       "metadata": {
         "id": "N3VRRQIEkXuP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "038962b4-c302-4894-b81c-10d09e2350bd"
+        "outputId": "fbe4e314-cb36-44fc-aad5-7d9507847e6c"
       },
-      "execution_count": 29,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "World\n"
+            "['Hello', 'World', 'Charles Darwin']\n"
           ]
         }
       ]
@@ -635,13 +635,27 @@
         "while a <= 3:\n",
         "\n",
         "    print (\"Counting!\" * a)\n",
-        "    #a += 1"
+        "    a += 1"
       ],
       "metadata": {
-        "id": "07YbiCGO4O1w"
+        "id": "07YbiCGO4O1w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a3ad29f0-9f05-4692-f2ed-1ad7f47d7def"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Counting!\n",
+            "Counting!Counting!\n",
+            "Counting!Counting!Counting!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1619,9 +1633,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pinPQdEn0mJM",
-        "outputId": "8b2e7bae-fe1b-44af-d75d-f2b0cb105077"
+        "outputId": "b394599d-beb8-488d-e868-8b87e0ff83ce"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1631,7 +1645,7 @@
             "  Downloading biopython-1.85-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (13 kB)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from biopython) (2.0.2)\n",
             "Downloading biopython-1.85-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m32.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/3.3 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.7/3.3 MB\u001b[0m \u001b[31m20.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m58.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m43.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: biopython\n",
             "Successfully installed biopython-1.85\n"
           ]
@@ -1645,7 +1659,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ccd6f0b",
-        "outputId": "70af8419-2f7b-4212-e6c2-bb7e12b48a77"
+        "outputId": "777e0931-0032-4003-c84e-7c1dc95aed26"
       },
       "source": [
         "try:\n",
@@ -1654,7 +1668,7 @@
         "except ImportError:\n",
         "  print(\"Biopython is not installed or there was an import error.\")"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1684,7 +1698,7 @@
       "metadata": {
         "id": "ltZBr8mE4OhM"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
