--- a/Bioinformatics_Module03.ipynb
+++ b/Bioinformatics_Module03.ipynb
@@ -1816,18 +1816,18 @@
         "\n",
         "for seq_record in parse(\"practice_9.txt\", \"fasta\"):\n",
         "    print (seq_record.id)\n",
-        "    print (seq_record.seq)\n",
-        "    print (len(seq_record.seq))\n",
-        "    print (seq_record)"
+        "    #print (seq_record.seq)\n",
+        "    #print (len(seq_record.seq))\n",
+        "    #print (seq_record)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xUi3JEoh7yJ6",
-        "outputId": "70d2fb30-4160-4104-ec06-90bcf2e77b47"
+        "outputId": "8d85e9a0-966f-4614-c91c-c1abbe627886"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1848,6 +1848,43 @@
       "metadata": {
         "id": "SAjUYBpe3pwi"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from Bio.SeqUtils import gc_fraction\n",
+        "\n",
+        "file_name = \"/content/rosalind_gc.txt\"\n",
+        "#with open(file_name,\"r\") as data:\n",
+        "maximum = 0\n",
+        "id = 0\n",
+        "for seq_record in parse (\"rosalind_gc.txt\", \"fasta\"):\n",
+        "  if gc_fraction(seq_record) > maximum:\n",
+        "    maximum = gc_fraction(seq_record)\n",
+        "    id = seq_record.id\n",
+        "print(id)\n",
+        "print (maximum*100)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sGkv8abebWub",
+        "outputId": "299515c3-ec56-4457-af3c-73e1d630824e"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rosalind_9843\n",
+            "53.11750599520384\n"
+          ]
+        }
+      ]
     }
   ]
 }
